--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -53,8 +53,9 @@
     border-radius: 100px;
 
     @include media-query($on-palm) {
-      width: 40px;
-      height: 40px;
+      width: 44px;
+      height: 44px;
+      font-size: 0.98em;
     }
   }
 
@@ -101,6 +102,12 @@
       color: $color-second;
       font-size: 1.2em;
       line-height: $base-line-height;
+
+      @include media-query($on-palm) {
+        text-align: center;
+        font-size: 1.3em;
+        color: $color-white;
+      }      
 
       @include media-query-min($on-laptop) {
         &:hover {
@@ -150,20 +157,20 @@
           .trigger-categories-wrapper {
             display: block;
             position: relative;
+            margin-top: 20px;
+            
             &:before {
               content: '';
               position: absolute;
               width: 30px;
-              border-top: 2px solid $color-first;
+              border-top: 4px solid $color-first;
               top: 0;
               left: 0;
               right: 0;
               margin-left: auto;
               margin-right: auto;
-              //margin-top: -14px;
-              margin-top: -40px;
+              margin-top: -24px;
             }
-            margin-top: 30px;
           }
           .btn-close-wrapper {
             text-align: center;
@@ -171,8 +178,8 @@
             width: 100%;
             bottom: 0;
             .btn-close {
-              width: 44px;
-              height: 44px;
+              width: 40px;
+              height: 40px;
               margin-left: auto;
               margin-right: auto;
             }
@@ -183,15 +190,15 @@
           margin-bottom: 0;
           li {
             width: 100%;
-            a {
+            a.sidebar-nav-item {
               text-align: center;
               color: $color-white !important;
               display: block;
               padding: 5px 10px;
               margin-left: 0;
               font-weight: 700;
-              font-size: 1.3em !important;
-              line-height: 2em !important;
+              font-size: 1.2em !important;
+              line-height: 1.8em !important;
             }
           }
         }
@@ -210,7 +217,6 @@
         &:not(:last-child) {
           margin-right: 0;
         }
-        margin-left: 20px;
       }
     }
   }
