--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -87,8 +87,10 @@
 
             > img {
                 transform: translate(-16px, -60px) scale(1.2);
-                &:hover {
-                    transform: translate(-16px, -60px) scale(1.3);
+                @include media-query-min($on-laptop) {
+                    &:hover {
+                        transform: translate(-16px, -60px) scale(1.3);
+                    }
                 }
             }
 
@@ -204,7 +206,7 @@
 
                         > li {
                             display: inline-block;
-                            background-color: $color-five;
+                            background-color: #CDCDCD;
                             color: $color-white;
                             text-align: center;
                             padding: 0 10px;
