--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -84,6 +84,7 @@
             mask-size: cover;
             -webkit-mask-image: url('/public/img/profile-mask.svg');
             -webkit-mask-size: cover;
+            overflow: hidden;
 
             > img {
                 transform: translate(-16px, -60px) scale(1.2);
